Comperator hinzu